; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/mpcdec/extr_mpc_demux.c_mpc_demux_seek_sample.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/mpcdec/extr_mpc_demux.c_mpc_demux_seek_sample.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, i32, i32*, %struct.TYPE_14__*, %struct.TYPE_15__, %struct.TYPE_11__ }
%struct.TYPE_14__ = type { i32, i32 }
%struct.TYPE_15__ = type { i32 }
%struct.TYPE_11__ = type { i32, i32, i32, i64 }
%struct.TYPE_13__ = type { i64, i32 }

@MPC_FRAME_LENGTH = common dso_local global i32 0, align 4
@MPC_DECODER_SYNTH_DELAY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"AP\00", align 1
@MPC_STATUS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mpc_demux_seek_sample(%struct.TYPE_12__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_12__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_13__, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %3, align 8
  store i32 %1, i32* %4, align 4
  %12 = load i32, i32* @MPC_FRAME_LENGTH, align 4
  %13 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %13, i32 0, i32 5
  %15 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = shl i32 %12, %16
  store i32 %17, i32* %8, align 4
  %18 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %18, i32 0, i32 5
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 3
  %21 = load i64, i64* %20, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %23, %21
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %27, i32 0, i32 5
  %29 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = icmp sgt i32 %26, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %2
  %33 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %33, i32 0, i32 5
  %35 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  store i32 %36, i32* %4, align 4
  br label %37

37:                                               ; preds = %32, %2
  %38 = load i32, i32* %4, align 4
  %39 = load i32, i32* %8, align 4
  %40 = sdiv i32 %38, %39
  store i32 %40, i32* %5, align 4
  %41 = load i32, i32* @MPC_DECODER_SYNTH_DELAY, align 4
  %42 = load i32, i32* %4, align 4
  %43 = load i32, i32* %8, align 4
  %44 = srem i32 %42, %43
  %45 = add nsw i32 %41, %44
  store i32 %45, i32* %6, align 4
  %46 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %47 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %46, i32 0, i32 5
  %48 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %47, i32 0, i32 2
  %49 = load i32, i32* %48, align 8
  %50 = icmp eq i32 %49, 7
  br i1 %50, label %51, label %68

51:                                               ; preds = %37
  %52 = load i32, i32* %5, align 4
  %53 = icmp sgt i32 %52, 32
  br i1 %53, label %54, label %61

54:                                               ; preds = %51
  %55 = load i32, i32* %5, align 4
  %56 = sub nsw i32 %55, 32
  store i32 %56, i32* %5, align 4
  %57 = load i32, i32* @MPC_FRAME_LENGTH, align 4
  %58 = mul nsw i32 %57, 32
  %59 = load i32, i32* %6, align 4
  %60 = add nsw i32 %59, %58
  store i32 %60, i32* %6, align 4
  br label %67

61:                                               ; preds = %51
  %62 = load i32, i32* @MPC_FRAME_LENGTH, align 4
  %63 = load i32, i32* %5, align 4
  %64 = mul nsw i32 %62, %63
  %65 = load i32, i32* %6, align 4
  %66 = add nsw i32 %65, %64
  store i32 %66, i32* %6, align 4
  store i32 0, i32* %5, align 4
  br label %67

67:                                               ; preds = %61, %54
  br label %68

68:                                               ; preds = %67, %37
  %69 = load i32, i32* %5, align 4
  %70 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %71 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %70, i32 0, i32 0
  %72 = load i32, i32* %71, align 8
  %73 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %74 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %73, i32 0, i32 5
  %75 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %74, i32 0, i32 0
  %76 = load i32, i32* %75, align 8
  %77 = sub nsw i32 %72, %76
  %78 = ashr i32 %69, %77
  store i32 %78, i32* %7, align 4
  %79 = load i32, i32* %7, align 4
  %80 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %81 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %80, i32 0, i32 1
  %82 = load i32, i32* %81, align 4
  %83 = icmp sge i32 %79, %82
  br i1 %83, label %84, label %89

84:                                               ; preds = %68
  %85 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %86 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %85, i32 0, i32 1
  %87 = load i32, i32* %86, align 4
  %88 = sub nsw i32 %87, 1
  store i32 %88, i32* %7, align 4
  br label %89

89:                                               ; preds = %84, %68
  %90 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %91 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %90, i32 0, i32 2
  %92 = load i32*, i32** %91, align 8
  %93 = load i32, i32* %7, align 4
  %94 = sext i32 %93 to i64
  %95 = getelementptr inbounds i32, i32* %92, i64 %94
  %96 = load i32, i32* %95, align 4
  store i32 %96, i32* %9, align 4
  %97 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %98 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %97, i32 0, i32 0
  %99 = load i32, i32* %98, align 8
  %100 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %101 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %100, i32 0, i32 5
  %102 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %101, i32 0, i32 0
  %103 = load i32, i32* %102, align 8
  %104 = sub nsw i32 %99, %103
  %105 = load i32, i32* %7, align 4
  %106 = shl i32 %105, %104
  store i32 %106, i32* %7, align 4
  %107 = load i32, i32* %7, align 4
  %108 = load i32, i32* %8, align 4
  %109 = mul nsw i32 %107, %108
  %110 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %111 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %110, i32 0, i32 3
  %112 = load %struct.TYPE_14__*, %struct.TYPE_14__** %111, align 8
  %113 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %112, i32 0, i32 0
  store i32 %109, i32* %113, align 4
  %114 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %115 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %114, i32 0, i32 5
  %116 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %115, i32 0, i32 2
  %117 = load i32, i32* %116, align 8
  %118 = icmp sge i32 %117, 8
  br i1 %118, label %119, label %202

119:                                              ; preds = %89
  %120 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %121 = load i32, i32* %9, align 4
  %122 = call i32 @mpc_demux_seek(%struct.TYPE_12__* %120, i32 %121, i32 11)
  %123 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %124 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %123, i32 0, i32 4
  %125 = call i32 @mpc_bits_get_block(%struct.TYPE_15__* %124, %struct.TYPE_13__* %10)
  store i32 %125, i32* %11, align 4
  br label %126

126:                                              ; preds = %180, %119
  %127 = load i32, i32* %7, align 4
  %128 = load i32, i32* %5, align 4
  %129 = icmp slt i32 %127, %128
  br i1 %129, label %130, label %195

130:                                              ; preds = %126
  %131 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %10, i32 0, i32 1
  %132 = load i32, i32* %131, align 8
  %133 = call i64 @memcmp(i32 %132, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 2)
  %134 = icmp eq i64 %133, 0
  br i1 %134, label %135, label %180

135:                                              ; preds = %130
  %136 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %137 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %136, i32 0, i32 3
  %138 = load %struct.TYPE_14__*, %struct.TYPE_14__** %137, align 8
  %139 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %138, i32 0, i32 0
  %140 = load i32, i32* %139, align 4
  %141 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %142 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %141, i32 0, i32 1
  %143 = load i32, i32* %142, align 4
  %144 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %145 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %144, i32 0, i32 0
  %146 = load i32, i32* %145, align 8
  %147 = shl i32 %143, %146
  %148 = load i32, i32* @MPC_FRAME_LENGTH, align 4
  %149 = mul nsw i32 %147, %148
  %150 = icmp eq i32 %140, %149
  br i1 %150, label %151, label %170

151:                                              ; preds = %135
  %152 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %153 = call i64 @mpc_demux_pos(%struct.TYPE_12__* %152)
  %154 = trunc i64 %153 to i32
  %155 = load i32, i32* %11, align 4
  %156 = mul nsw i32 8, %155
  %157 = sub nsw i32 %154, %156
  %158 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %159 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %158, i32 0, i32 2
  %160 = load i32*, i32** %159, align 8
  %161 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %162 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %161, i32 0, i32 1
  %163 = load i32, i32* %162, align 4
  %164 = sext i32 %163 to i64
  %165 = getelementptr inbounds i32, i32* %160, i64 %164
  store i32 %157, i32* %165, align 4
  %166 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %167 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %166, i32 0, i32 1
  %168 = load i32, i32* %167, align 4
  %169 = add nsw i32 %168, 1
  store i32 %169, i32* %167, align 4
  br label %170

170:                                              ; preds = %151, %135
  %171 = load i32, i32* %8, align 4
  %172 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %173 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %172, i32 0, i32 3
  %174 = load %struct.TYPE_14__*, %struct.TYPE_14__** %173, align 8
  %175 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %174, i32 0, i32 0
  %176 = load i32, i32* %175, align 4
  %177 = add nsw i32 %176, %171
  store i32 %177, i32* %175, align 4
  %178 = load i32, i32* %7, align 4
  %179 = add nsw i32 %178, 1
  store i32 %179, i32* %7, align 4
  br label %180

180:                                              ; preds = %170, %130
  %181 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %10, i32 0, i32 0
  %182 = load i64, i64* %181, align 8
  %183 = trunc i64 %182 to i32
  %184 = load i32, i32* %11, align 4
  %185 = add nsw i32 %183, %184
  %186 = mul nsw i32 %185, 8
  %187 = load i32, i32* %9, align 4
  %188 = add nsw i32 %187, %186
  store i32 %188, i32* %9, align 4
  %189 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %190 = load i32, i32* %9, align 4
  %191 = call i32 @mpc_demux_seek(%struct.TYPE_12__* %189, i32 %190, i32 11)
  %192 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %193 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %192, i32 0, i32 4
  %194 = call i32 @mpc_bits_get_block(%struct.TYPE_15__* %193, %struct.TYPE_13__* %10)
  store i32 %194, i32* %11, align 4
  br label %126

195:                                              ; preds = %126
  %196 = load i32, i32* %11, align 4
  %197 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %198 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %197, i32 0, i32 4
  %199 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %198, i32 0, i32 0
  %200 = load i32, i32* %199, align 8
  %201 = sub nsw i32 %200, %196
  store i32 %201, i32* %199, align 8
  br label %272

202:                                              ; preds = %89
  %203 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %204 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %203, i32 0, i32 3
  %205 = load %struct.TYPE_14__*, %struct.TYPE_14__** %204, align 8
  %206 = load i32, i32* %5, align 4
  %207 = icmp ne i32 %206, 0
  %208 = zext i1 %207 to i32
  %209 = call i32 @mpc_decoder_reset_scf(%struct.TYPE_14__* %205, i32 %208)
  %210 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %211 = load i32, i32* %9, align 4
  %212 = call i32 @mpc_demux_seek(%struct.TYPE_12__* %210, i32 %211, i32 4)
  br label %213

213:                                              ; preds = %268, %202
  %214 = load i32, i32* %7, align 4
  %215 = load i32, i32* %5, align 4
  %216 = icmp slt i32 %214, %215
  br i1 %216, label %217, label %271

217:                                              ; preds = %213
  %218 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %219 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %218, i32 0, i32 3
  %220 = load %struct.TYPE_14__*, %struct.TYPE_14__** %219, align 8
  %221 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %220, i32 0, i32 0
  %222 = load i32, i32* %221, align 4
  %223 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %224 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %223, i32 0, i32 1
  %225 = load i32, i32* %224, align 4
  %226 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %227 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %226, i32 0, i32 0
  %228 = load i32, i32* %227, align 8
  %229 = shl i32 %225, %228
  %230 = load i32, i32* @MPC_FRAME_LENGTH, align 4
  %231 = mul nsw i32 %229, %230
  %232 = icmp eq i32 %222, %231
  br i1 %232, label %233, label %249

233:                                              ; preds = %217
  %234 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %235 = call i64 @mpc_demux_pos(%struct.TYPE_12__* %234)
  %236 = trunc i64 %235 to i32
  %237 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %238 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %237, i32 0, i32 2
  %239 = load i32*, i32** %238, align 8
  %240 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %241 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %240, i32 0, i32 1
  %242 = load i32, i32* %241, align 4
  %243 = sext i32 %242 to i64
  %244 = getelementptr inbounds i32, i32* %239, i64 %243
  store i32 %236, i32* %244, align 4
  %245 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %246 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %245, i32 0, i32 1
  %247 = load i32, i32* %246, align 4
  %248 = add nsw i32 %247, 1
  store i32 %248, i32* %246, align 4
  br label %249

249:                                              ; preds = %233, %217
  %250 = load i32, i32* %8, align 4
  %251 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %252 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %251, i32 0, i32 3
  %253 = load %struct.TYPE_14__*, %struct.TYPE_14__** %252, align 8
  %254 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %253, i32 0, i32 0
  %255 = load i32, i32* %254, align 4
  %256 = add nsw i32 %255, %250
  store i32 %256, i32* %254, align 4
  %257 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %258 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %257, i32 0, i32 4
  %259 = call i64 @mpc_bits_read(%struct.TYPE_15__* %258, i32 20)
  %260 = add nsw i64 %259, 20
  %261 = load i32, i32* %9, align 4
  %262 = sext i32 %261 to i64
  %263 = add nsw i64 %262, %260
  %264 = trunc i64 %263 to i32
  store i32 %264, i32* %9, align 4
  %265 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %266 = load i32, i32* %9, align 4
  %267 = call i32 @mpc_demux_seek(%struct.TYPE_12__* %265, i32 %266, i32 4)
  br label %268

268:                                              ; preds = %249
  %269 = load i32, i32* %7, align 4
  %270 = add nsw i32 %269, 1
  store i32 %270, i32* %7, align 4
  br label %213

271:                                              ; preds = %213
  br label %272

272:                                              ; preds = %271, %195
  %273 = load i32, i32* %6, align 4
  %274 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %275 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %274, i32 0, i32 3
  %276 = load %struct.TYPE_14__*, %struct.TYPE_14__** %275, align 8
  %277 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %276, i32 0, i32 1
  store i32 %273, i32* %277, align 4
  %278 = load i32, i32* @MPC_STATUS_OK, align 4
  ret i32 %278
}

declare dso_local i32 @mpc_demux_seek(%struct.TYPE_12__*, i32, i32) #1

declare dso_local i32 @mpc_bits_get_block(%struct.TYPE_15__*, %struct.TYPE_13__*) #1

declare dso_local i64 @memcmp(i32, i8*, i32) #1

declare dso_local i64 @mpc_demux_pos(%struct.TYPE_12__*) #1

declare dso_local i32 @mpc_decoder_reset_scf(%struct.TYPE_14__*, i32) #1

declare dso_local i64 @mpc_bits_read(%struct.TYPE_15__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
